--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = git@github.com:Pastifier/Libft
+[submodule "minilibx_linux"]
+	path = minilibx_linux
+	url = https://github.com/42Paris/minilibx-linux.git
