--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "mlx_linux"]
 	path = mlx_linux
 	url = https://github.com/42Paris/minilibx-linux.git
+[submodule "libft"]
+	path = libft
+	url = git@github.com:Pastifier/Libft
